# ROSARCHESS

./: CMakeLists.txt  README.md  package.xml
aruco_python_wrapper/: CMakeLists.txt  GetGlCamera.cpp  test.py
data/: chessboard.xcf  chessboardinfo2_meters.yml  chessboardinfo2_pix.yml  final_board_better_met.yml  final_board_better_pix.yml  final_board_meters.yml  final_board_meters.yml~  final_board_pix.yml  final_dict.yml  newboard.yml  newboard_met.yml
ir_calib/: calib.yml  ost.txt
launch/: ar_board.launch
scripts/: arucoTest.py  ir_listener.py  listener.py  pose_listener.py  test_listener.py  video_resize.py
